--- a/style/style.css
+++ b/style/style.css
@@ -207,6 +207,42 @@ body .discover .discover-title {
   opacity: 0;
 }
 
+body .discover .swiper-container {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+body .discover .swiper-container .swiper-wrapper .swiper-slide {
+  width: 200px;
+  height: 280px;
+  position: relative;
+  overflow: hidden;
+}
+
+body .discover .swiper-container .swiper-wrapper .swiper-slide img {
+  height: 100%;
+}
+
+body .discover .swiper-container .swiper-wrapper .swiper-slide .swiper-explain {
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
+}
+
+body .discover .swiper-container .swiper-wrapper .swiper-slide .swiper-explain h2 {
+  font-size: 1rem;
+}
+
+body .discover .swiper-container .swiper-wrapper .swiper-slide .swiper-explain p {
+  font-size: 10px;
+}
+
+body .discover .swiper-slide-shadow-left,
+body .discover .swiper-slide-shadow-right {
+  background: none;
+}
+
 body .discover .discover-page-two .serve-title h2 {
   -webkit-transform: translateY(-50px);
           transform: translateY(-50px);
@@ -659,18 +695,10 @@ body .footer-details .details .footer-copyright .terms-privacy a {
   }
   .about {
     padding: 2rem 20px;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    -ms-flex-line-pack: center;
-        align-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
   .about .about-title {
     text-align: center;
+    margin-top: 40px;
   }
   .about .about-title h2 {
     margin-bottom: 20px;
@@ -684,8 +712,7 @@ body .footer-details .details .footer-copyright .terms-privacy a {
     background: #06617d;
     padding: 13px 37px;
     border: none;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 40px;
   }
   .about .about-title .btn-about .link-about {
     color: white;
@@ -702,6 +729,10 @@ body .footer-details .details .footer-copyright .terms-privacy a {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-transform: translateY(70px);
+            transform: translateY(70px);
   }
   .about .about-image .about-img1 {
     width: 140px;
@@ -788,7 +819,10 @@ body .footer-details .details .footer-copyright .terms-privacy a {
     font-size: 14px;
   }
   .discover .discover-page-two .serve-image {
+    width: 80%;
     margin-top: 70px;
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
   }
   .discover .discover-page-two .serve-image .serve1 {
@@ -797,7 +831,7 @@ body .footer-details .details .footer-copyright .terms-privacy a {
   .discover .discover-page-two .serve-image .serve2 {
     width: 100px;
     position: absolute;
-    right: 0;
+    right: -30px;
     bottom: -30px;
   }
   .discover .discover-page-three {
@@ -1327,81 +1361,11 @@ body .footer-details .details .footer-copyright .terms-privacy a {
     color: #d4d2d2;
   }
   .discover .discover-page-one .discover-image {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    border: 1px solid white;
+    width: 610px;
+    margin-left: auto;
+    margin-right: auto;
     -webkit-transform: translateY(70px);
             transform: translateY(70px);
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .dhigurah-beach {
-    position: relative;
-    overflow: hidden;
-    width: 300px;
-    height: 300px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .dhigurah-beach img {
-    height: 100%;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .dhigurah-beach .dhigurah-beach-explain {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .dhigurah-beach .dhigurah-beach-explain h2 {
-    margin-bottom: 10px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Bikini-beach {
-    position: relative;
-    overflow: hidden;
-    width: 300px;
-    height: 300px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Bikini-beach img {
-    height: 100%;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Bikini-beach .Bikini-beach-explain {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Bikini-beach .Bikini-beach-explain h2 {
-    margin-bottom: 10px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Milaidhoo-beach {
-    position: relative;
-    overflow: hidden;
-    width: 300px;
-    height: 300px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Milaidhoo-beach img {
-    height: 100%;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Milaidhoo-beach .Milaidhoo-beach-explain {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Milaidhoo-beach .Milaidhoo-beach-explain h2 {
-    margin-bottom: 10px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover h2 {
-    font-size: 14px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover p {
-    font-size: 10px;
-    color: #d4d2d2;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover img {
-    -webkit-transition: 0.3s ease;
-    transition: 0.3s ease;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover img:hover {
-    -webkit-transform: scale(1.05);
-            transform: scale(1.05);
   }
   .discover .discover-page-two {
     height: 100vh;
@@ -1986,69 +1950,8 @@ body .footer-details .details .footer-copyright .terms-privacy a {
     font-size: 1rem;
   }
   .discover .discover-page-one .discover-image {
-    margin-top: 60px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .dhigurah-beach {
-    position: relative;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .dhigurah-beach img {
-    width: 190px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .dhigurah-beach .dhigurah-beach-explain {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .dhigurah-beach .dhigurah-beach-explain h2 {
-    font-size: 1rem;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .dhigurah-beach .dhigurah-beach-explain p {
-    font-size: 14px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Bikini-beach {
-    position: relative;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Bikini-beach img {
-    width: 210px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Bikini-beach .Bikini-beach-explain {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Bikini-beach .Bikini-beach-explain h2 {
-    font-size: 1.1rem;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Bikini-beach .Bikini-beach-explain p {
-    font-size: 0.9rem;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Milaidhoo-beach {
-    position: relative;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Milaidhoo-beach img {
-    width: 190px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Milaidhoo-beach .Milaidhoo-beach-explain {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Milaidhoo-beach .Milaidhoo-beach-explain h2 {
-    font-size: 1rem;
-  }
-  .discover .discover-page-one .discover-image .container-image-discover .Milaidhoo-beach .Milaidhoo-beach-explain p {
-    font-size: 14px;
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
   }
   .discover .discover-page-two {
     height: 70vh;
@@ -2112,16 +2015,19 @@ body .footer-details .details .footer-copyright .terms-privacy a {
     font-size: 1rem;
   }
   .discover .discover-page-three .discover-video {
+    width: 70%;
     margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
   }
   .discover .discover-page-three .discover-video video {
-    width: 600px;
+    width: 100%;
   }
   .discover .discover-page-three .discover-video .play-button {
     position: absolute;
-    bottom: -1rem;
-    right: 1rem;
+    bottom: -2rem;
+    right: 0;
     background: #06617d;
     width: 100px;
     height: 70px;
@@ -2428,8 +2334,7 @@ body .footer-details .details .footer-copyright .terms-privacy a {
     font-size: 1.2rem;
   }
   .about .about-image {
-    width: 70%;
-    height: 50%;
+    width: 80%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2439,6 +2344,8 @@ body .footer-details .details .footer-copyright .terms-privacy a {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-transform: translateY(70px);
+            transform: translateY(70px);
   }
   .about .about-image .about-img1 {
     width: 230px;
@@ -2619,7 +2526,12 @@ body .footer-details .details .footer-copyright .terms-privacy a {
     font-size: 2rem;
   }
   .places .container-image-places {
-    gap: 20px 0;
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+    -ms-grid-columns: (max-content)[2];
+        grid-template-columns: repeat(2, -webkit-max-content);
+        grid-template-columns: repeat(2, max-content);
+    gap: 20px 20px;
   }
   .mail .container-mail {
     width: 100%;
