--- a/style/style.scss
+++ b/style/style.scss
@@ -167,9 +167,36 @@ body {
       transform: translateY(-40px);
       opacity: 0;
     }
-    .container-image-discover {
-      // transform: translateY(-50px);
-      // opacity: 0;
+    .swiper-container {
+      display: grid;
+      place-items: center;
+      .swiper-wrapper {
+        .swiper-slide {
+          width: 200px;
+          height: 280px;
+          position: relative;
+          overflow: hidden;
+
+          img {
+            height: 100%;
+          }
+          .swiper-explain {
+            position: absolute;
+            left: 20px;
+            bottom: 20px;
+            h2 {
+              font-size: 1rem;
+            }
+            p {
+              font-size: 10px;
+            }
+          }
+        }
+      }
+    }
+    .swiper-slide-shadow-left,
+    .swiper-slide-shadow-right {
+      background: none;
     }
     .discover-page-two {
       .serve-title {
@@ -524,13 +551,10 @@ body {
   // ABOUT for MOBILE
   .about {
     padding: 2rem 20px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    align-content: center;
-    align-items: center;
 
     .about-title {
       text-align: center;
+      margin-top: 40px;
       h2 {
         margin-bottom: 20px;
       }
@@ -544,8 +568,7 @@ body {
         background: $snd-color;
         padding: 13px 37px;
         border: none;
-        margin-top: 30px;
-        margin-bottom: 30px;
+        margin-top: 40px;
         .link-about {
           color: white;
           font-weight: 500;
@@ -558,6 +581,10 @@ body {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      margin-left: auto;
+      margin-right: auto;
+      // width: 100%;
+      transform: translateY(70px);
       .about-img1 {
         width: 140px;
       }
@@ -644,7 +671,10 @@ body {
         }
       }
       .serve-image {
+        width: 80%;
         margin-top: 70px;
+        margin-left: auto;
+        margin-right: auto;
         position: relative;
         .serve1 {
           width: 280px;
@@ -652,7 +682,7 @@ body {
         .serve2 {
           width: 100px;
           position: absolute;
-          right: 0;
+          right: -30px;
           bottom: -30px;
         }
       }
@@ -1080,80 +1110,10 @@ body {
         }
       }
       .discover-image {
-        display: flex;
-        justify-content: space-between;
-        // width: 800px;
-        border: 1px solid white;
+        width: 610px;
+        margin-left: auto;
+        margin-right: auto;
         transform: translateY(70px);
-        .container-image-discover {
-          .dhigurah-beach {
-            position: relative;
-            overflow: hidden;
-            width: 300px;
-            height: 300px;
-            img {
-              height: 100%;
-            }
-            .dhigurah-beach-explain {
-              position: absolute;
-              bottom: 20px;
-              left: 20px;
-
-              h2 {
-                margin-bottom: 10px;
-              }
-            }
-          }
-          .Bikini-beach {
-            position: relative;
-            overflow: hidden;
-            width: 300px;
-            height: 300px;
-            img {
-              height: 100%;
-            }
-            .Bikini-beach-explain {
-              position: absolute;
-              bottom: 20px;
-              left: 20px;
-
-              h2 {
-                margin-bottom: 10px;
-              }
-            }
-          }
-          .Milaidhoo-beach {
-            position: relative;
-            overflow: hidden;
-            width: 300px;
-            height: 300px;
-            img {
-              height: 100%;
-            }
-            .Milaidhoo-beach-explain {
-              position: absolute;
-              bottom: 20px;
-              left: 20px;
-
-              h2 {
-                margin-bottom: 10px;
-              }
-            }
-          }
-          h2 {
-            font-size: 14px;
-          }
-          p {
-            font-size: 10px;
-            color: $font-clr-snd;
-          }
-          img {
-            transition: 0.3s ease;
-            &:hover {
-              transform: scale(1.05);
-            }
-          }
-        }
       }
     }
     .discover-page-two {
@@ -1646,63 +1606,7 @@ body {
         }
       }
       .discover-image {
-        margin-top: 60px;
-        .container-image-discover {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          .dhigurah-beach {
-            position: relative;
-            img {
-              width: 190px;
-            }
-            .dhigurah-beach-explain {
-              position: absolute;
-              bottom: 10px;
-              left: 10px;
-              h2 {
-                font-size: 1rem;
-              }
-              p {
-                font-size: 14px;
-              }
-            }
-          }
-          .Bikini-beach {
-            position: relative;
-            img {
-              width: 210px;
-            }
-            .Bikini-beach-explain {
-              position: absolute;
-              bottom: 10px;
-              left: 10px;
-              h2 {
-                font-size: 1.1rem;
-              }
-              p {
-                font-size: 0.9rem;
-              }
-            }
-          }
-          .Milaidhoo-beach {
-            position: relative;
-            img {
-              width: 190px;
-            }
-            .Milaidhoo-beach-explain {
-              position: absolute;
-              bottom: 10px;
-              left: 10px;
-              h2 {
-                font-size: 1rem;
-              }
-              p {
-                font-size: 14px;
-              }
-            }
-          }
-        }
+        transform: translateY(100px);
       }
     }
     .discover-page-two {
@@ -1758,15 +1662,18 @@ body {
         }
       }
       .discover-video {
+        width: 70%;
         margin-top: 100px;
+        margin-left: auto;
+        margin-right: auto;
         position: relative;
         video {
-          width: 600px;
+          width: 100%;
         }
         .play-button {
           position: absolute;
-          bottom: -1rem;
-          right: 1rem;
+          bottom: -2rem;
+          right: 0;
           background: $snd-color;
           width: 100px;
           height: 70px;
@@ -2046,11 +1953,11 @@ body {
     }
 
     .about-image {
-      width: 70%;
-      height: 50%;
+      width: 80%;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      transform: translateY(70px);
       .about-img1 {
         width: 230px;
       }
@@ -2217,7 +2124,9 @@ body {
       }
     }
     .container-image-places {
-      gap: 20px 0;
+      transform: translateY(50px);
+      grid-template-columns: repeat(2, max-content);
+      gap: 20px 20px;
     }
   }
   // mail TABLET
